Sat Feb  7 10:56:00 1998  Stephan Kulow  <coolo@kde.org>

	* configure.in: good news - KDE is relocatable again.

	* libtool.m4.in: updated to latest libtool 1.0i

Fri Feb  6 21:26:51 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: added a AC_PROVIDE for AC_PROG_CC and
	AC_PROG_CPP to KDE_CHECK_COMPILERS

Thu Feb  5 16:27:47 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: put $QTDIR/bin before /usr/bin in the path to
	look for moc. I don't know why, but I got a report, that configure
	found /usr/bin/moc under Solaris

Fri Jan 30 15:47:50 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: export LIBRARY_PATH after reset to the saved
	value
	
	* acinclude.m4.in: unset the LIBRARY_PATH to get a relieable
	result when trying to find, if Qt compiles without -L

Sat Jan 24 00:45:52 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: fixed another bug in AC_PATH_KDE

Thu Jan 22 14:46:15 1998  Stephan Kulow  <coolo@kde.org>

	* configure.in: fixed an ugly bug in AC_BASE_PATH_KDE

	* kappfinder/kappfinder.in: let kappfinder create by configure to
	allow the use of the kde_ paths

Wed Jan 21 22:19:35 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: - added a install_root prefix to all paths, if
	set, to enable package managers to move the whole installation at once
	- added --with-install-root to set the install_root prefix

Tue Jan 20 22:41:04 1998  Stephan Kulow  <coolo@kde.org>

	* configure.in: added NOOPT_CXXFLAGS to allow kioslave to be
	compiled without -O2

Mon Jan 19 21:55:21 1998  Stephan Kulow  <coolo@kde.org>

	* configure.in: some little fixes for the Makefiles

	* acinclude.m4.in: --prefix will no longer override the search for 
	libraries. If they are present somewhere, they are used (through
	the methodes in KApplication)

Mon Jan 12 00:30:36 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in fixed an ugly bug, that accoured, when
	qt_libraries is not set (empty/equals X11/not necessary)
	